--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,26 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.8",
+        "easycorp/easyadmin-bundle": "^2",
+        "sensio/framework-extra-bundle": "^6.1",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
-        "symfony/yaml": "5.0.*"
+        "symfony/proxy-manager-bridge": "5.0.*",
+        "symfony/string": "5.0.*",
+        "symfony/twig-bundle": "5.0.*",
+        "symfony/yaml": "5.0.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/intl-extra": "^3.3",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.29"
     },
     "config": {
         "preferred-install": {
