--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
         "symfony/proxy-manager-bridge": "5.0.*",
+        "symfony/security-bundle": "5.0.*",
         "symfony/string": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
         "symfony/yaml": "5.0.*",
