--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.29",
+        "symfony/phpunit-bridge": "^5.2",
         "symfony/stopwatch": "^5.0",
         "symfony/web-profiler-bundle": "^5.0"
     },
