--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/browser-kit": "5.0.*",
         "symfony/maker-bundle": "^1.29",
+        "symfony/panther": "@dev",
         "symfony/phpunit-bridge": "^5.2",
         "symfony/stopwatch": "^5.0",
         "symfony/web-profiler-bundle": "^5.0"
