--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
 ###> symfony/framework-bundle ###
 /.idea
-/.env.local
-/.env.local
+/.env
+/.env
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
