--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
         "symfony/http-client": "5.0.*",
+        "symfony/messenger": "5.0.*",
         "symfony/proxy-manager-bridge": "5.0.*",
         "symfony/security-bundle": "5.0.*",
         "symfony/string": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
+        "symfony/workflow": "5.0.*",
         "symfony/yaml": "5.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.3",
