--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -10,6 +10,6 @@ easy_admin:
                     - { property: 'email', type: 'email' }
                     - { property: 'photoFilename', type: 'image', 'base_path': '/uploads/photos', label: 'Photo' }
                     - state
-                    - { property: 'cratedAt', type: 'datetime' }
+                    - { property: 'createdAt', type: 'datetime' }
                 sort: ['createdAt', 'ASC']
                 filters: ['conference']
