--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,9 @@ services:
             POSTGRES_PASSWORD: main
             POSTGRES_DB: main
         ports: [5432]
+    redis:
+        image: library/redis:5-alpine
+        ports: [6379]
+    rabbitmq:
+        image: library/rabbitmq:3.7-management
+        ports: [5672, 15672]
