--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
         "symfony/http-client": "5.0.*",
+        "symfony/mailer": "5.0.*",
         "symfony/messenger": "5.0.*",
         "symfony/proxy-manager-bridge": "5.0.*",
         "symfony/security-bundle": "5.0.*",
@@ -23,7 +24,9 @@
         "symfony/twig-bundle": "5.0.*",
         "symfony/workflow": "5.0.*",
         "symfony/yaml": "5.0.*",
+        "twig/cssinliner-extra": "^3",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/inky-extra": "^3",
         "twig/intl-extra": "^3.3",
         "twig/twig": "^2.12|^3.0"
     },
